--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -31,9 +31,9 @@ of Dojo might include fixes to support future releases of these browsers, but we
 
 * iOS 4.x, 5.x (Mobile Safari) and 6.x (including all Dijit widgets except Editor)
 
-* Android 2.2-2.3, 3.1-3.2, 4.0-4.1 (Platform browser)
+* Android 2.2-2.3, 3.1-3.2, 4.0-4.2 (Platform browser)
 
-* BlackBerry 6-7 (Platform browser)
+* BlackBerry 6-7 & 10 (Platform browser)
 
 * Mobile compatibility on desktop browsers: IE 8-9, Firefox 4-12, Safari 5-6, Chrome 13-19
 
