rename bgIframe has() flag to config-bgIframe in release notes

--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -52,14 +52,14 @@ Dijit
 
 dijit/BackgroundIframe
 ----------------------
-There's now a "bgIframe" has() flag that can be used to explicitly turn on/off the background iframe behind popups
+There's now a "config-bgIframe" has() flag that can be used to explicitly turn on/off the background iframe behind popups
 that's useful when a page contains applets, and also for older versions of IE with the bleed through select problem.
 Usage is:
 
 .. html ::
 
 	<script type="text/javascript" src="../../dojo/dojo.js"
-		data-dojo-config="has: {bgIframe: true}"></script>
+		data-dojo-config="has: {'config-bgIframe': true}"></script>
 
 It can also be specified as a build parameter in the staticHasFlags section.
 
