Support for returning a dojo/Deferred from a test fixture.
See http://bugs.dojotoolkit.org/changeset/30054/dojo for details.

--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -146,6 +146,11 @@ dojox/gfx
 Util
 ====
 
+Doh
+---
+Support added for returning a dojo/promise/Promise or dojo/Deferred from a test fixture.
+Before, you could only return a doh.Deferred or a dojo/_base/Deferred.
+
 
 Demos
 =====
