--- a/releasenotes/1.8.rst
+++ b/releasenotes/1.8.rst
@@ -17,7 +17,7 @@ of Dojo might include fixes to support future releases of these browsers, but we
 
 **Desktop**
 
-* Firefox 3.6-12
+* Firefox 3.6-12 (Dojo 1.8.2+ also support Firefox 13-17)
 
 * Safari 5-6
 
@@ -29,7 +29,7 @@ of Dojo might include fixes to support future releases of these browsers, but we
 
 **Mobile (dojox/mobile)**
 
-* iOS 4.x, 5.x (Mobile Safari) (including all Dijit widgets except Editor)
+* iOS 4.x, 5.x (Mobile Safari) (including all Dijit widgets except Editor) (Dojo 1.8.2+ also supports iOS 6.x)
 
 * Android 2.2-2.3, 3.1-3.2, 4.0-4.1 (Platform browser)
  
