--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -99,6 +99,7 @@ dojox/charting
    * Mouse indicator action (dojox/charting/action2d/MouseIndicator) now supports over mode in addition to mouse drag. The mouse indicator can also be further customized (ability to remove the label, ...).
    * Grids (dojox/charting/plot2d/Grid) now support grid stripes in addition to grid lines.
    * Ability to render labels on data points for Bubble/Columns/Default/Scatter plots by setting labels property to true.
+   * Charting now supports bidi mirroring. You can enable it calling myChart.setDir("rtl").
 
 *Incompatibilities*
 
