dojox/mobile: IE10 support + scrollable.js not usable outside of dojo any more

--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -82,12 +82,20 @@ DojoX
 dojox/mobile
 ------------
 
+*Features*
+
    * dojox/mobile data-aware lists now support an itemRenderer property allowing to change the type of ListItem instances created by the list.
    * New Android Holo dark theme used by default on Android 3.x and 4.x devices. For backward compatibility, you can force 'Android' theme on all Android devices by configuring deviceTheme:
 
 .. js ::
 
 	<script src="../deviceTheme.js" data-dojo-config="mblUserAgent:navigator.userAgent.match('Android')?'Android':null">
+
+   * Internet Explorer 10 is now supported "natively" (that is, without compatibility code and CSS): since IE10 supports CSS3 transitions, animations and gradients, compatibility mode is disabled for IE10, and Dojo Mobile uses the non-prefixed CSS3 properties supported by IE10 in addition to the webkit-prefixed properties.
+
+*Incompatibilities*
+
+   * The dojox/mobile/scrollable.js module cannot be used outside of Dojo any more.
 
 dojox/charting
 --------------
