Updates to /releasenotes/1.9 via Wiki

--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -96,6 +96,7 @@ dojox/mobile
 *Incompatibilities*
 
    * The dojox/mobile/scrollable.js module cannot be used outside of Dojo any more.
+   * The endTransition method of the dojox/mobile/TransitionEvent class has been removed since it was never called by the dojox/mobile framework.
 
 dojox/charting
 --------------
