--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -171,12 +171,13 @@ dojox/app
    * Custom Layout controller support is available with a dojox/app/controllers/LayoutBase which can be extended with a custom layout controller.
    * Support for a constraint setting on a view in the config has been added, which will add data-app-constraint to the domNode for the view, and place the view into the specified constraint (or region).
    * A new BorderLayout controller has been provided, which uses a dijit/layout/BorderContainer to layout views, and uses constraint settings on views in the config to determine which constraint (or region) a view should be placed into.
-   * Support was added to allow multiple views to be included in the DefaultViews in the config as well as on transitions and the url used in the transition. This allows multiple views to be displayed with different constraints (or regions) at the same time.  It is also now possible to transition views in regions other than the center.
+   * Support was added to allow multiple views to be included in the DefaultViews in the config as well as on transitions and the url used in the transition. This allows multiple views to be displayed with different constraints (or regions) at the same time.  It is also now possible to transition views in regions other than the center.  To specify multiple views the view names would listed separated by a "+" for example "view1+view2" or "view1,subviewA+view2".  Support has also been added to be able to use a "-" to hide a view.  So if "view1+view2" are displayed and a transition is requested for "view3-view1" then view3 would be displayed (replacing view2 assuming they have the same constraint) and view1 would be hidden.
 
 
 *Incompatibilities*
 
    * data-app-region has been changed to data-app-constraint.
+   * Since "+" and "-" can now be used to indicate multiple views on a transition, those characters are no longer allowed in a view name.
    * The events used in the Layout controllers have changed from layout and select to initLayout and layoutView.
    * zIndex is no longer automatically set on views depending upon whether they are in the center or not.  In the past the zIndex was automatically set higher on the left pane of a tablet view to avoid having the transition for the center show over that left pane.
    * In 1.8 dojox/app would automatically require a model and mvc controller if it was listed in the config and not included in the list of dependencies.  In 1.9 the model and mvc controller will need to be listed in the dependencies. For example:
@@ -191,7 +192,7 @@ dojox/app
 	]
 
 
-*Incompatibilities continued*
+*Incompatibilities (continued)*
    * In 1.8 dojox/app would automatically include the Load, Transition and Layout controllers, unless "noAutoLoadControllers" was set to true in the config.  In 1.9 the controllers are no longer automatically loaded, and the noAutoLoadControllers option has been removed.  So the config must include the necessary controllers. For example:
 
 .. js ::
